code/typescript/InvestmentResearch/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Research client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/investment-research-api)
[![npm](https://img.shields.io/badge/npm-v0.1.2-orange)](https://www.npmjs.com/package/@factset/sdk-investmentresearch/v/0.1.2)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Investment Research API provides a comprehensive set of functionalities for searching and retrieving research reports and documents from various contributors.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

FactSet collects research reports and models from brokers, independent research providers, market research firms, rating agencies, and other publishers of research. These documents are processed and made available to clients within about two minutes of receipt.

FactSet delivers this content through two main products:

**FactSet Research Connect** – real-time research for investment managers entitled by the contributors to access the content.

**FactSet Aftermarket Research** – delayed research for investment bankers permitted by contributors to purchase the research.

The meta endpoints namely time-zones, categories, research-contributors, research-analysts, security-types and asset-types provide comprehensive lists of data that is used in the research endpoints.

  

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.1.2
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-investmentresearch@0.1.2
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-investmentresearch@0.1.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, MetaApi } = require('@factset/sdk-investmentresearch');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new MetaApi();

// Call api endpoint
apiInstance.getAssetTypes().then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-investmentresearch');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/investment-research/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*investmentresearch.MetaApi* | [**getAssetTypes**](docs/MetaApi.md#getAssetTypes) | **GET** /meta/asset-types | Returns the codes indicating asset types.
*investmentresearch.MetaApi* | [**getCategories**](docs/MetaApi.md#getCategories) | **GET** /meta/categories | Returns the categories.
*investmentresearch.MetaApi* | [**getResearchAnalyst**](docs/MetaApi.md#getResearchAnalyst) | **GET** /meta/research-analysts | Returns the research analysts&#39; details.
*investmentresearch.MetaApi* | [**getResearchContributor**](docs/MetaApi.md#getResearchContributor) | **GET** /meta/research-contributors | Returns the research contributors&#39; details.
*investmentresearch.MetaApi* | [**getSecurityTypes**](docs/MetaApi.md#getSecurityTypes) | **GET** /meta/security-types | Returns the codes indicating security types.
*investmentresearch.MetaApi* | [**getTimezones**](docs/MetaApi.md#getTimezones) | **GET** /meta/time-zones | Returns the time zones.
*investmentresearch.ResearchApi* | [**getCount**](docs/ResearchApi.md#getCount) | **POST** /count | Returns the count of documents for specified source.
*investmentresearch.ResearchApi* | [**getInvestmentResearchData**](docs/ResearchApi.md#getInvestmentResearchData) | **POST** /search | Retrieve investment research documents and related metadata within FactSet coverage.


## Documentation for Models

 - [investmentresearch.AssetResponse](docs/AssetResponse.md)
 - [investmentresearch.AssetTypesResponse](docs/AssetTypesResponse.md)
 - [investmentresearch.CategoriesResponse](docs/CategoriesResponse.md)
 - [investmentresearch.CategoriesResponseObject](docs/CategoriesResponseObject.md)
 - [investmentresearch.CountRequest](docs/CountRequest.md)
 - [investmentresearch.CountRequestBody](docs/CountRequestBody.md)
 - [investmentresearch.CountResponse](docs/CountResponse.md)
 - [investmentresearch.CountResponseObject](docs/CountResponseObject.md)
 - [investmentresearch.Document](docs/Document.md)
 - [investmentresearch.ErrorExample](docs/ErrorExample.md)
 - [investmentresearch.ErrorResponse](docs/ErrorResponse.md)
 - [investmentresearch.InvalidIdErrorObject](docs/InvalidIdErrorObject.md)
 - [investmentresearch.InvestmentResearchResponse](docs/InvestmentResearchResponse.md)
 - [investmentresearch.InvestmentResearchResponseItems](docs/InvestmentResearchResponseItems.md)
 - [investmentresearch.InvestmentResearchResponseMeta](docs/InvestmentResearchResponseMeta.md)
 - [investmentresearch.InvestmentResearchResponseMetaPagination](docs/InvestmentResearchResponseMetaPagination.md)
 - [investmentresearch.ResearchAnalystResponse](docs/ResearchAnalystResponse.md)
 - [investmentresearch.ResearchAnalystResponseObject](docs/ResearchAnalystResponseObject.md)
 - [investmentresearch.ResearchContributorResponse](docs/ResearchContributorResponse.md)
 - [investmentresearch.ResearchContributorResponseObject](docs/ResearchContributorResponseObject.md)
 - [investmentresearch.SearchRequest](docs/SearchRequest.md)
 - [investmentresearch.SearchRequestBody](docs/SearchRequestBody.md)
 - [investmentresearch.SearchRequestMeta](docs/SearchRequestMeta.md)
 - [investmentresearch.SearchRequestMetaPagination](docs/SearchRequestMetaPagination.md)
 - [investmentresearch.SecurityResponse](docs/SecurityResponse.md)
 - [investmentresearch.SecurityTypesResponse](docs/SecurityTypesResponse.md)
 - [investmentresearch.TimeZoneResponse](docs/TimeZoneResponse.md)
 - [investmentresearch.TimeZonesResponse](docs/TimeZonesResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
